// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Partnerships renders correctly with default empty values 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-3"
  />
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Partnerships
        </h3>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Edit Partnerships"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          title="Edit Partnerships"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-caption"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
               EDIT
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            aria-label="indigenous-partnerships-table"
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head makeStyles-tableHeading-2"
                  scope="col"
                >
                  Indigenous Partnerships
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            />
          </table>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            aria-label="stakeholder-partnerships-table"
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head makeStyles-tableHeading-2"
                  scope="col"
                >
                  Stakeholder Partnerships
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Partnerships renders correctly with existing species values 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-9"
  />
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Partnerships
        </h3>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Edit Partnerships"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          title="Edit Partnerships"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-caption"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
               EDIT
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            aria-label="indigenous-partnerships-table"
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head makeStyles-tableHeading-8"
                  scope="col"
                >
                  Indigenous Partnerships
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  partner 1
                </td>
              </tr>
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body makeStyles-tableCellBorderBottom-7"
                >
                  partner 2
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            aria-label="stakeholder-partnerships-table"
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head makeStyles-tableHeading-8"
                  scope="col"
                >
                  Stakeholder Partnerships
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  partner 3
                </td>
              </tr>
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body makeStyles-tableCellBorderBottom-7"
                >
                  partner 4
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Partnerships renders correctly with invalid null values 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-6"
  />
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Partnerships
        </h3>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <button
          aria-label="Edit Partnerships"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          title="Edit Partnerships"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              class="MuiTypography-root MuiTypography-caption"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                />
              </svg>
               EDIT
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            aria-label="indigenous-partnerships-table"
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head makeStyles-tableHeading-5"
                  scope="col"
                >
                  Indigenous Partnerships
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            />
          </table>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            aria-label="stakeholder-partnerships-table"
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head makeStyles-tableHeading-5"
                  scope="col"
                >
                  Stakeholder Partnerships
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
